--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="square.css">
 </head>
 <body>
-    <div id="outer-square">
-        <div id="square"></div>
-    </div>
-    <p>square.</p>
+    <div id="square"></div>
+    <p id="status">square.</p>
+    <script src="square.js"></script>
 </body>
 </html>
